--- a/webservice/templates/standard_menu.html
+++ b/webservice/templates/standard_menu.html
@@ -77,7 +77,7 @@
       <a class="item" href="{{pomspath}}/campaign_definition_edit">
         Compose Job Type
       </a>
-      <a class="item" href="{{pomspath}}/campaign_edit">
+      <a class="item" href="{{pomspath}}/campaign_stage_edit">
         Compose Campaign Stages
       </a>
       <a class="item" target="_blank" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/LaunchConfigFileTemplates">
