--- a/webservice/templates/index.html
+++ b/webservice/templates/index.html
@@ -139,7 +139,7 @@ Job Launches: {{launches}}
             <i class="right floated cogs icon teal" style="font-size: 30px;"></i>
 
             <div class="header">
-                Bookkeeping
+              Debugging
             </div>
             <div class="meta">
             </div>
@@ -152,6 +152,15 @@ Job Launches: {{launches}}
                 <i class="question circle icon"></i>
             </div>
         </a>
+    </div>
+
+    <div class="card">
+        <div class="content">
+            <i class="right floated cogs icon teal" style="font-size: 30px;"></i>
+            <div class="description">
+                <img class="ui image" src="{{pomspath}}/static/img/space_for_rent.png">
+            </div>
+        </div>
     </div>
 
     <div class="card">
