Fixed a few conversion errors.

--- a/webservice/templates/campaign_stage_edit.html
+++ b/webservice/templates/campaign_stage_edit.html
@@ -185,7 +185,7 @@ Campaign Stages {{ show_hint('', 'Help page') }}
 
       <div class="fields">
         <div class="field">
-            <label>Name {{ show_hint('#Stage-Name', 'Stage name') }}</label>
+            <label>Stage Name {{ show_hint('#Stage-Name', 'Stage name') }}</label>
             <input type="text" id="ae_stage_name" name="ae_stage_name" placeholder="Campaign Stage Name">
         </div>
         <div class="field">
