--- a/webservice/templates/campaign_time_bars.html
+++ b/webservice/templates/campaign_time_bars.html
@@ -47,10 +47,10 @@ POMS:Campaign Stage {{name}}
          {% if plist|length > 0 %}
 
                <div class='row' style='margin:0px 0px; padding:0px 0px;'>
-                   <div class='mwm_label' style='text-align: right; width: 14%; float:left; padding: 5px 5px; border-right: 1px solid black; '>
-                     {{id}}{{blob.extramap[id]}}
+                   <div class='mwm_label' style='text-align: right; width: 19%; float:left; padding: 5px 5px; border-right: 1px solid black; '>
+                     {{id|safe}}{{blob.extramap[id]}}
                    </div>
-                   <div clas='mwm_rowdata'  style='position: relative; width: 85%; float:left; clear: right; border-right: 1px solid black; border-left: 1px solid black; padding: 5px 0px'>
+                   <div clas='mwm_rowdata'  style='position: relative; width: 80%; float:left; clear: right; border-right: 1px solid black; border-left: 1px solid black; padding: 5px 0px'>
 
                       {% for p in plist %}
 
