--- a/webservice/templates/gui_wf_edit.html
+++ b/webservice/templates/gui_wf_edit.html
@@ -74,7 +74,7 @@
 <div id="mystages" oncontextmenu='return false;' contextmenu=""></div>
 <h4 style="margin: 1px;">Campaign Login/Setups and Jobtypes</h4>
 <div id="myjobtypes" oncontextmenu='return false;' contextmenu=""></div>
-<pre id="eventSpan"></pre>
+<pre id="eventSpan" style="display: none;"></pre>
 <div id="outer_gui_editor_frame" style="display: none;"></div>
 
 <script type="text/javascript">
