replaced workflows with campaigns

--- a/webservice/templates/standard_menu.html
+++ b/webservice/templates/standard_menu.html
@@ -58,7 +58,7 @@
         Campaign Stages
       </a>
       <a class="item" href="{{pomspath}}/sample_workflows">
-        Sample Workflows
+        Sample Campaigns
       </a>
 <!--
       <a class="item" href="{{pomspath}}/show_campaigns?active=False">
