--- a/webservice/templates/sample_workflows.html
+++ b/webservice/templates/sample_workflows.html
@@ -1,7 +1,7 @@
 {%extends "layout.html"%}
 
 {%block header%}
-Workflow Samples
+Campaign Samples
 {%endblock%}
 
 {%block subheader%}
@@ -9,7 +9,7 @@ Workflow Samples
 {%endblock%}
 
 {%block title%}
-    POMS: Workflow Samples
+    POMS: Campaign Samples
 {%endblock%}
 
 {%block content%}
@@ -18,9 +18,9 @@ Workflow Samples
         <thead>
             <tr>
                 <th>Campaign Name </th>
-                <th data-sorter="false" data-filter="false">View Workflow</th>
+                <th data-sorter="false" data-filter="false">View Campaign</th>
                 <th data-sorter="false" data-filter="false">View .ini</th>
-                <th data-sorter="false" data-filter="false">Clone Workflow</th>
+                <th data-sorter="false" data-filter="false">Clone Campaign</th>
             </tr>
         </thead>
         <tbody>
@@ -30,20 +30,20 @@ Workflow Samples
                 <td>
                     <a href="{{pomspath}}/gui_wf_edit?campaign={{sample}}&readonly=true">
                         <button type="button">
-                            <i class="file icon"></i>View Workflow
+                            <i class="file icon"></i>View Campaign
                         </button>
                     </a>
                 </td>
                 <td>
                     <a href="{{pomspath}}/static/{{sample}}">
                         <button type="button">
-                            <i class="file icon"></i>Workflow ini
+                            <i class="file icon"></i>Campaign ini
                         </button>
                     </a>
                 </td>
                 <td>
                     <button type="button" onclick="clone_template('{{sample}}');">
-                        <i class="copy blue icon"></i>Clone Workflow
+                        <i class="copy blue icon"></i>Clone Campaign
                     </button>
                 </td>
             </tr>
@@ -56,18 +56,18 @@ Workflow Samples
 <div class="ui modal" id="sample_clone_modal">
   <i class="close icon"></i>
   <h3 class="block header"><span id="template_header">
-      Clone Workflow </span>
+      Clone Campaign </span>
   </h3>
   <div class="ui hidden divider"></div>
   <div class="ui text container">
     <form id="sample_clone_form" class="ui form" method="GET" action="{{pomspath}}/gui_wf_edit?">
       <div class="two fields">
         <div class="field">
-          <label>Sample Workflow Name</label>
+          <label>Sample Campaign Name</label>
           <input type="text" id="campaign" name="campaign" readonly>
         </div>
         <div class="field">
-          <label>Clone Workflow Name</label>
+          <label>Clone Campaign Name</label>
           <input type="text" id="to" name="to">
         </div>
       </div>
